# BW_Midi_Sequencer

./: .gitattributes  .gitignore  LICENSE.txt  README.md  TODO.txt
examples/fluidsynth/: CMakeLists.txt  fluid_play.cpp  fluid_seq.cpp  fluid_seq.h
examples/mididump/: CMakeLists.txt  mididump.cpp
examples/tinysoundfont/: CMakeLists.txt  fluid_play.cpp  fluid_seq.cpp  fluid_seq.h
examples/win32-midiOut/: CMakeLists.txt  native_midi_win32_seq.cpp  native_midi_win32_seq.h  w32-playmidi.c
include/: midi_sequencer.h  midi_sequencer.hpp  midi_sequencer_impl.hpp
test_files/: device_switch_1.mid  device_switch_2.mid  loop_1.mid  loop_2.mid  loop_complex.mid  loop_one_note.mid
